--- a/webadmin/templates/analytics.html
+++ b/webadmin/templates/analytics.html
@@ -38,6 +38,10 @@
                 <span class="icon">☰</span>
                 <span>Templates</span>
             </a>
+            <a href="/landing-pages" class="nav-item">
+                <span class="icon">◫</span>
+                <span>Landing Pages</span>
+            </a>
             <a href="/targets" class="nav-item">
                 <span class="icon">◉</span>
                 <span>Targets</span>
